--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link href="css/sb-admin-2.min.css" rel="stylesheet" /> 
 
         <!-- Custom styles for this page -->
-    <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
+    <!-- <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet"> -->
   </head>
 
   <body id="page-top">
@@ -35,28 +35,14 @@
 
         </div>
         <script type="module" src="/src/main.js"></script>
+        <script src="vendor/jquery/jquery.min.js"></script> 
+        <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <!-- <script src="vendor/jquery-easing/jquery.easing.min.js"></script> -->
+        <script src="js/sb-admin-2.min.js" defer></script>
    
     <a class="scroll-to-top rounded" href="#page-top">
       <i class="fas fa-angle-up"></i>
     </a>
-
-   
-
-    <!-- Bootstrap core JavaScript-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Core plugin JavaScript-->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Custom scripts for all pages-->
-    <script src="js/sb-admin-2.min.js" DEFER></script>
-
-     <!-- Page level plugins -->
-    <!-- <script src="vendor/datatables/jquery.dataTables.min.js"></script> -->
-    <!-- <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script> -->
-
-    <!-- Page level custom scripts -->
-    <!-- <script src="js/demo/datatables-demo.js"></script> -->
   </body>
 </html>
+
